@@ -159,6 +159,9 @@ Trunk (unreleased changes)
     mapper against the types specified in JobConf.  
     (Tahir Hashmi via tomwhite)
 
+49. HADOOP-971.  Improve DFS Scalability: Improve name node performance
+    by adding a hostname to datanodes map.  (Hairong Kuang via tomwhite)
+
 
 Release 0.12.3 - 2007-04-06
 
